--- a/src/app/features/admin/containers/property-content/container/property-content-edit/property-content-edit.component.html
+++ b/src/app/features/admin/containers/property-content/container/property-content-edit/property-content-edit.component.html
@@ -295,7 +295,7 @@
                   <div class="mt-4 mb-4 relative">
                     <div class="relative">
                       <span class="bg-white text-sm text-gray-500 font-bold">
-                        Price: {{roomType.price | currency: 'VND': 'symbol-narrow'}}
+                        Price: {{roomType.price | number:'':'es'}} VND
                       </span>
                     </div>
                   </div>
