--- a/src/app/features/admin/containers/property-content/property-content.component.html
+++ b/src/app/features/admin/containers/property-content/property-content.component.html
@@ -12,7 +12,7 @@
                  [(ngModel)]="searchKey"
                  (keyup.enter)="search()"
                  class="block border w-full sm:rounded-none md:rounded-l-md border-gray-300 pl-4 pt-3 pb-3 focus:border-emerald-500 focus:ring-emerald-500 sm:text-sm"
-                 placeholder="Search report by content">
+                 placeholder="Search property by name">
         </div>
         <div class="flex">
           <div>
